--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
   <body>
     <noscript>
       <strong
-        >We're sorry but <%- title %> doesn't work properly without
-        JavaScript enabled. Please enable it to continue.</strong
+        >We're sorry but <%- title %> doesn't work properly without JavaScript
+        enabled. Please enable it to continue.</strong
       >
     </noscript>
     <div id="app">
       <div class="first-screen-loading">
         <div class="first-screen-loading-spinner"></div>
-        <div class="first-screen-loading-text">正在加载中，请稍等 ...</div>
+        <div class="first-screen-loading-text">Please wait...</div>
       </div>
       <script>
         document.oncontextmenu = (e) => e.preventDefault();
